# auto-invest

./: .gitignore  README.md  pinescript.txt  prepare.py  program.md  pyproject.toml  strategy_basic.py  strategy_relative.py  train.py
